clusters/cosmos/apps/uptime/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: uptime-ingress
spec:
 tls:
 - hosts:
   - uptime.cosmos.cboxlab.com
   secretName: uptime-cert
 rules:
 - host: uptime.cosmos.cboxlab.com
   http:
     paths:
     - backend:
         service:
           name: uptime
           port:
             name: http
       path: /
       pathType: Prefix
